--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
         sudo apt-get -qq -y install libc++-dev:i386 libglu1-mesa:i386\
-          libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libx11-6:i386 libglew1.10:i386;
+          libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libx11-6:i386 libglew-dev:i386;
 
         if [ "$COMPILER" == "gcc32" ]; then
           sudo apt-get -qq -y install gcc-multilib g++-multilib;
@@ -95,7 +95,8 @@ install:
 
 # by default most of our jobs will be run on a linux instance
 os: linux
-group: travis_latest
+dist: xenial
+group: edge
 compiler: gcc
 language: cpp
 
