--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
       sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
       sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
       sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev \
-        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libglew-dev     \
+        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev \
         libprotobuf-dev protobuf-compiler;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
@@ -30,7 +30,6 @@ before_install:
           sudo apt-get -qq -y install gcc-multilib g++-multilib;
         fi
 
-        sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so;
         sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so;
         sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so;
         sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include;
@@ -41,7 +40,7 @@ before_install:
         unzip enigma-libs.zip -d ENIGMAsystem/;
         mv ENIGMAsystem/Install ENIGMAsystem/Additional;
       else
-        sudo apt-get -qq -y install libc++-dev libglu1-mesa-dev;
+        sudo apt-get -qq -y install libc++-dev libglu1-mesa-dev libglew-dev;
       fi
 
       if [ "$AUDIO" == "OpenAL" ]; then
