--- a/ENIGMAsystem/SHELL/Bridges/SDL-OpenGL1/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/SDL-OpenGL1/Makefile
@@ -1,1 +1,2 @@
-SOURCES += $(wildcard Bridges/SDL-OpenGL1/*.cpp)
+override CXXFLAGS += -DGL_MAJOR_VERSION=1 -DGL_MINOR_VERSION=1
+SOURCES += $(wildcard Bridges/SDL-OpenGL/*.cpp)
