use pkg-config & fix win32-sdl

--- a/ENIGMAsystem/SHELL/Platforms/SDL/Makefile
+++ b/ENIGMAsystem/SHELL/Platforms/SDL/Makefile
@@ -1,2 +1,8 @@
 SOURCES += $(wildcard Platforms/SDL/*.cpp) $(wildcard Platforms/General/POSIX/*.cpp)
-override LDLIBS += -lz -lpthread -lSDL2
+override CXXFLAGS += $(shell pkg-config --cflags sdl2) -DENIGMA_WS_SDL
+
+ifeq ($(TARGET-PLATFORM), Windows)
+override LDLIBS += -lz -lpthread $(shell pkg-config --libs sdl2) -limm32 -lole32 -loleaut32 -lversion
+else
+override LDLIBS += -lz -lpthread $(shell pkg-config --libs sdl2)
+endif
