josh's nits + mkdir fix

--- a/ENIGMAsystem/SHELL/Platforms/SDL/Makefile
+++ b/ENIGMAsystem/SHELL/Platforms/SDL/Makefile
@@ -3,11 +3,11 @@ ifndef PKG-CONFIG
 endif
 
 SOURCES += $(wildcard Platforms/SDL/*.cpp) Platforms/General/POSIX/Utility.cpp
-override CXXFLAGS += $(shell $(PKG-CONFIG) --cflags sdl2) -DENIGMA_PTFRM_SDL
+override CXXFLAGS += $(shell $(PKG-CONFIG) --cflags sdl2) -DENIGMA_PLATFORM_SDL
 
 ifeq ($(TARGET-PLATFORM), Windows)
-SOURCES += $(wildcard Bridges/SDL-Win32/*.cpp)
+	SOURCES += $(wildcard Bridges/SDL-Win32/*.cpp)
 override LDLIBS += $(shell $(PKG-CONFIG) --libs --static sdl2)
 else
-override LDLIBS += -lpthread $(shell $(PKG-CONFIG) --libs sdl2)
+	override LDLIBS += -lpthread $(shell $(PKG-CONFIG) --libs sdl2)
 endif
