--- a/ENIGMAsystem/SHELL/Platforms/Win32/Makefile
+++ b/ENIGMAsystem/SHELL/Platforms/Win32/Makefile
@@ -1,3 +1,3 @@
 SOURCES += $(wildcard Platforms/Win32/*.cpp)
-override CXXFLAGS += -DENIGMA_PTFRM_WIN
+override CXXFLAGS += -DENIGMA_PLATFORM_WINDOWS
 override LDLIBS += -lffi -lcomdlg32 -lgdi32 -lwinmm -lwininet
