--- a/.travis.yml
+++ b/.travis.yml
@@ -103,12 +103,6 @@ group: travis_latest
 compiler: gcc
 language: cpp
 
-after_failure:
-  - |
-    if [ "$TEST_HARNESS" == true ]; then
-      ./CommandLine/testing/GitHub-ImageDiff.sh
-    fi
-
 env:
   global:
     - OUTPUT=/tmp/test
@@ -198,8 +192,17 @@ script:
       export DISPLAY=:1
       Xvfb :1 -screen 0 1024x768x24 &
       xfwm4 &
-      ASAN_OPTIONS=detect_leaks=0 ./test-runner
+      ASAN_OPTIONS=detect_leaks=0
+      if [ ./test-runner ]; then
+        exit 1
+      fi
       bash <(curl -s https://codecov.io/bash) -f "*.info"
     else
       ./ci-build.sh
+    fi
+
+after_failure:
+  - |
+    if [ "$TEST_HARNESS" == true ]; then
+      ./CommandLine/testing/GitHub-ImageDiff.sh
     fi
