--- a/.travis.yml
+++ b/.travis.yml
@@ -189,8 +189,8 @@ script:
       export DISPLAY=:1
       Xvfb :1 -screen 0 1024x768x24 &
       xfwm4 &
-      ASAN_OPTIONS=detect_leaks=0
-      if ./test-runner ; then
+      export ASAN_OPTIONS=detect_leaks=0
+      if ! ./test-runner ; then
         ./CommandLine/testing/GitHub-ImageDiff.sh
         exit 1
       fi
