--- a/.travis.yml
+++ b/.travis.yml
@@ -191,7 +191,7 @@ script:
       xfwm4 &
       export ASAN_OPTIONS=detect_leaks=0
       if ! ./test-runner ; then
-        if [ "$IMAGE_COMPARE_FAILED" == true ]; then
+        if [ -f "/tmp/enigma_draw_diff.png" ]; then
           ./CommandLine/testing/GitHub-ImageDiff.sh
         fi
         exit 1
