--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ before_install:
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
       sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
       sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
-      sudo apt-get -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev \
-        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libglew-dev     \
+      sudo apt-get -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
+        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libglew-dev\
         libprotobuf-dev protobuf-compiler;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
@@ -54,7 +54,7 @@ before_install:
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
         sudo apt-get update;
         sudo apt-get -y install cmake libgtest-dev xvfb wmctrl xdotool xfwm4 lcov gcc-7\
-          g++-7 cpp-7 pulseaudio libpugixml-dev libyaml-cpp-dev;
+          g++-7 cpp-7 pulseaudio libpugixml-dev libyaml-cpp-dev mesa-utils;
 
         # download rapidjson manually because ubuntu is ancient
         wget -O rapidjson-master.zip https://github.com/Tencent/rapidjson/archive/master.zip;
@@ -187,7 +187,12 @@ script:
     if [ "$TEST_HARNESS" == true ]; then
       make test-runner
       export DISPLAY=:1
+      export LIBGL_ALWAYS_SOFTWARE=1
       Xvfb :1 -screen 0 1024x768x24 &
+      echo "glxinfo BEGIN"
+      sleep 3 # give xvfb some time to start
+      glxinfo
+      echo "glxinfo END"
       xfwm4 &
       export ASAN_OPTIONS=detect_leaks=0
       if ! ./test-runner ; then
