--- a/ENIGMAsystem/SHELL/Platforms/xlib/Makefile
+++ b/ENIGMAsystem/SHELL/Platforms/xlib/Makefile
@@ -1,2 +1,2 @@
 SOURCES += $(wildcard Platforms/xlib/*.cpp) $(wildcard Platforms/General/POSIX/*.cpp)
-override LDLIBS += -lz -lpthread -lX11 -lXtst
+override LDLIBS += -lz -lpthread -lX11
