fix sdl/xlib/cocoa get_timer for user same as Win32

--- a/ENIGMAsystem/SHELL/Platforms/.vscode/settings.json
+++ b/ENIGMAsystem/SHELL/Platforms/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"*.gmx": "xml",
-		"xstring": "cpp"
+		"xstring": "cpp",
+		"algorithm": "cpp",
+		"limits": "cpp"
 	}
 }
