--- a/ENIGMAsystem/SHELL/Bridges/SDL-OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/SDL-OpenGL3/Makefile
@@ -1,2 +1,2 @@
-override CXXFLAGS += -DGL_MAJOR_VERSION=3 -DGL_MINOR_VERSION=3
+override CXXFLAGS += -DGL_MAJOR_VERSION=3 -DGL_MINOR_VERSION=0 -IGraphics_Systems/OpenGL3/glad
 SOURCES += $(wildcard Bridges/SDL-OpenGL/*.cpp)
