--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
@@ -1,4 +1,4 @@
-override CXXFLAGS += -IGraphics_Systems/OpenGL3/glad/
+override CXXFLAGS += -IGraphics_Systems/OpenGL3/glad/ -IGraphics_Systems/OpenGL3/glad/KHR
 SOURCES += $(wildcard Graphics_Systems/OpenGL3/*.cpp) $(wildcard Graphics_Systems/General/*.cpp) Graphics_Systems/OpenGL3/glad/glad.c
 
 ifeq ($(TARGET-PLATFORM), Windows)
