--- a/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
+++ b/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
@@ -1,4 +1,5 @@
 #include <windows.h>
+#include <Dlgs.h>
 
 1 RT_MANIFEST "Widget_Systems/Win32/manifest.xml"
 
@@ -15,19 +16,6 @@ FONT 8, "Ms Shell Dlg 2"
   LTEXT           "Password", 13, 5, 23, 35, 14
   EDITTEXT        14, 45, 5, 135, 14, ES_AUTOHSCROLL | ES_LEFT | WS_BORDER | WS_TABSTOP
   EDITTEXT        15, 45, 21, 135, 14, ES_AUTOHSCROLL | ES_LEFT | ES_PASSWORD | WS_BORDER | WS_TABSTOP
-}
-
-/* --- get_string --- */
-getstringdialog DIALOG 0, 0, 185, 63
-
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_FIXEDSYS | WS_VISIBLE | WS_BORDER | WS_CAPTION | WS_DLGFRAME | WS_POPUP | WS_SYSMENU
-CAPTION "Prompt"
-FONT 8, "Ms Shell Dlg 2"
-{
-  DEFPUSHBUTTON   "OK", 10, 129, 5, 50, 14, BS_DEFPUSHBUTTON
-  PUSHBUTTON      "Cancel", 11, 129, 21, 50, 14, BS_PUSHBUTTON
-  EDITTEXT        12, 5, 43, 174, 15, ES_AUTOHSCROLL | ES_LEFT | WS_BORDER | WS_TABSTOP
-  LTEXT           "Uninitialized message",13, 5, 5, 119, 33, SS_LEFT
 }
 
 /* --- show_message_ext --- */
@@ -53,3 +41,47 @@ FONT 8, "Ms Shell Dlg 2"
 {
 
 }
+
+/* --- get_directory --- */
+FILEOPENORD DIALOG LOADONCALL MOVEABLE DISCARDABLE 36, 24, 268, 134
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU | WS_POPUP
+CAPTION "Open"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+  LTEXT "File &name:", stc3, 6, 6, 76, 9
+  EDITTEXT edt1, 6, 16, 90, 12, ES_AUTOHSCROLL | WS_TABSTOP | ES_OEMCONVERT
+  LISTBOX lst1, 6, 32, 90, 68, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
+  WS_TABSTOP | LBS_OWNERDRAWFIXED
+
+  LTEXT "&Folders:", 65535, 110, 6, 96, 9
+  LTEXT "", stc1, 110, 16, 96, 9, SS_NOPREFIX
+  LISTBOX lst2, 110, 32, 96, 68, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
+  WS_TABSTOP | LBS_OWNERDRAWFIXED
+
+  LTEXT "List files of &type:", stc2, 6, 104, 90, 9
+  COMBOBOX cmb1, 6, 114, 90, 96, CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+
+  LTEXT "Dri&ves:", stc4, 110, 104, 96, 9
+  COMBOBOX cmb2, 110, 114, 96, 68, CBS_SORT | CBS_HASSTRINGS | CBS_OWNERDRAWFIXED |
+  CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_LOWERCASE | WS_VSCROLL | WS_TABSTOP
+
+  DEFPUSHBUTTON "OK", IDOK, 212, 6, 50, 14, WS_GROUP
+  PUSHBUTTON "Cancel", IDCANCEL, 212, 24, 50, 14, WS_GROUP
+
+  PUSHBUTTON "&Help", pshHelp, 212, 46, 50, 14, WS_GROUP
+  AUTOCHECKBOX "&Read only", chx1, 212, 68, 50, 12, WS_TABSTOP | WS_GROUP
+
+  LTEXT "Static", 991, 216, 114, 28, 13, SS_NOPREFIX | SS_PATHELLIPSIS | SS_WORDELLIPSIS
+END
+
+/* --- get_string, get_password, get_integer, get_passcode --- */
+993 DIALOG 0, 0, 357, 128
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "InputBox"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+  EDITTEXT 990, 11, 94, 336, 23, ES_LEFT | ES_AUTOHSCROLL | ES_NOHIDESEL | WS_GROUP
+  DEFPUSHBUTTON "OK", IDOK, 273, 11, 73, 21
+  PUSHBUTTON "Cancel", IDCANCEL, 273, 40, 73, 21
+  LTEXT "Prompt", 992, 11, 11, 252, 73, SS_LEFT | SS_NOPREFIX
+END
