--- a/.travis.yml
+++ b/.travis.yml
@@ -191,7 +191,7 @@ script:
       Xvfb :1 -screen 0 1024x768x24 &
       xfwm4 &
       export ASAN_OPTIONS=detect_leaks=0;
-      if ! ./test-runner ; then
+      if [ ./test-runner -ne 0 ]; then
         if [ -f "/tmp/enigma_draw_diff.png" ]; then
           ./CommandLine/testing/GitHub-ImageDiff.sh
         fi
