--- a/.travis.yml
+++ b/.travis.yml
@@ -84,9 +84,6 @@ before_install:
 
 # build JDI and the CLI
 install:
-  - chmod +x ./ci-build.sh
-  - chmod +x ./ci-regression.sh
-  - chmod +x ./CommandLine/testing/GitHub-ImageDiff.sh
   - make -j4
   - |
     if [ "$TEST_HARNESS" == true ]; then
@@ -191,7 +188,7 @@ script:
       Xvfb :1 -screen 0 1024x768x24 &
       xfwm4 &
       export ASAN_OPTIONS=detect_leaks=0;
-      if [ ./test-runner -ne 0 ]; then
+      if ! ./test-runner ; then
         if [ -f "/tmp/enigma_draw_diff.png" ]; then
           ./CommandLine/testing/GitHub-ImageDiff.sh
         fi
