--- a/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
+++ b/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
@@ -48,14 +48,14 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU | WS_PO
 CAPTION "Select Directory"
 FONT 8, "MS Shell Dlg 2"
 {
-  LTEXT "&Files: (*.*)", stc3, 232, 56, 72, 16
-  LISTBOX lst1, 232, 72, 185, 93, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
-  WS_TABSTOP | LBS_OWNERDRAWFIXED
-
   LTEXT "&Directories:", 994, 8, 56, 72, 16
   LTEXT "", stc1, 8, 24, 40900, 16, SS_NOPREFIX
   LISTBOX lst2, 8, 72, 213, 123, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
-  WS_TABSTOP | LBS_OWNERDRAWFIXED
+  WS_TABSTOP | LBS_OWNERDRAWFIXED | WS_GROUP
+
+  LTEXT "&Files: (*.*)", stc3, 232, 56, 72, 16
+  LISTBOX lst1, 232, 72, 185, 93, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
+  LBS_OWNERDRAWFIXED
 
   LTEXT "Directory &Name:", stc2, 8, 8, 93, 16
 
