--- a/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
+++ b/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
@@ -51,11 +51,11 @@ FONT 8, "MS Shell Dlg 2"
   LTEXT "&Directories:", 994, 8, 56, 72, 16
   LTEXT "", stc1, 8, 24, 40900, 16, SS_NOPREFIX
   LISTBOX lst2, 8, 72, 213, 123, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
-  WS_TABSTOP | LBS_OWNERDRAWFIXED | WS_GROUP
+  WS_TABSTOP | LBS_OWNERDRAWFIXED
 
   LTEXT "&Files: (*.*)", stc3, 232, 56, 72, 16
   LISTBOX lst1, 232, 72, 185, 93, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
-  LBS_OWNERDRAWFIXED
+  WS_TABSTOP | LBS_OWNERDRAWFIXED
 
   LTEXT "Directory &Name:", stc2, 8, 8, 93, 16
 
@@ -72,7 +72,7 @@ FONT 8, "MS Shell Dlg 2"
 /* --- get_string, get_password, get_integer, get_passcode --- */
 993 DIALOG 0, 0, 357, 128
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "InputBox"
+CAPTION "Input Box"
 FONT 8, "MS Shell Dlg 2"
 {
   EDITTEXT 990, 11, 94, 336, 23, ES_LEFT | ES_AUTOHSCROLL | ES_NOHIDESEL | WS_GROUP
