--- a/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
+++ b/ENIGMAsystem/SHELL/Widget_Systems/Win32/resources.rc
@@ -51,7 +51,7 @@ FONT 8, "MS Shell Dlg 2"
   LTEXT "&Directories:", 994, 8, 56, 72, 16
   LTEXT "", stc1, 8, 24, 40900, 16, SS_NOPREFIX
   LISTBOX lst2, 8, 72, 213, 123, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
-  WS_TABSTOP | LBS_OWNERDRAWFIXED
+  WS_TABSTOP | LBS_OWNERDRAWFIXED | WS_GROUP
 
   LTEXT "&Files: (*.*)", stc3, 232, 56, 72, 16
   LISTBOX lst1, 232, 72, 185, 93, LBS_SORT | LBS_HASSTRINGS | LBS_NOTIFY | WS_VSCROLL |
@@ -61,7 +61,7 @@ FONT 8, "MS Shell Dlg 2"
 
   LTEXT "D&rives:", stc4, 232, 176, 50, 16
   COMBOBOX cmb2, 232, 192, 185, 19, CBS_SORT | CBS_HASSTRINGS | CBS_OWNERDRAWFIXED |
-  CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_LOWERCASE | WS_VSCROLL | WS_TABSTOP
+  CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_LOWERCASE | WS_VSCROLL | WS_TABSTOP | WS_GROUP
 
   DEFPUSHBUTTON "OK", IDOK, 256, 224, 77, 27, WS_GROUP
   PUSHBUTTON "Cancel", IDCANCEL, 340, 224, 77, 27, WS_GROUP
