make gles3 build but segfault

--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES3/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES3/Makefile
@@ -1,4 +1,4 @@
-override CXXFLAGS += -IGraphics_Systems/OpenGLES3/glad/
+override CXXFLAGS += -IGraphics_Systems/OpenGLES3/glad/ -DglClearDepth=glClearDepthf
 SOURCES += $(wildcard Graphics_Systems/OpenGL3/*.cpp) $(wildcard Graphics_Systems/General/*.cpp) Graphics_Systems/OpenGLES3/glad/glad.c
 
 ifeq ($(TARGET-PLATFORM), Windows)
