josh wants to try this

--- a/.travis.yml
+++ b/.travis.yml
@@ -195,9 +195,7 @@ script:
         travis_terminate 1
       fi
       # upload coverage report for regression tests
-      bash <(curl -s https://codecov.io/bash) -f "*.info" -s "/tmp/enigma-master"
-      # upload coverage report for normal tests
-      bash <(curl -s https://codecov.io/bash) -f "*.info"
+      bash <(curl -s https://codecov.io/bash) -f "*.info" -s . -s "/tmp/enigma-master"
     else
       ./ci-build.sh
     fi
