--- a/.travis.yml
+++ b/.travis.yml
@@ -192,7 +192,8 @@ script:
         travis_terminate 1
       fi
       # upload coverage report for regression tests
-      bash <(curl -s https://codecov.io/bash) -f "*.info" -s . -s "/tmp/enigma-master"
+      bash <(curl -s https://codecov.io/bash) -f "*.info" -s .
+      bash <(curl -s https://codecov.io/bash) -f "*.info" -s "/tmp/enigma-master"
     else
       ./ci-build.sh
     fi
