--- a/.travis.yml
+++ b/.travis.yml
@@ -191,7 +191,11 @@ script:
       Xvfb :1 -screen 0 1024x768x24 &
       xfwm4 &
       export ASAN_OPTIONS=detect_leaks=0;
-      ./test-runner
+      if ! ./test-runner ; then
+        travis_terminate 1
+      fi
+      ./CommandLine/testing/GitHub-ImageDiff.sh  
+      # upload coverage report for regression tests
       bash <(curl -s https://codecov.io/bash) -f "*.info"
     else
       ./ci-build.sh
