--- a/.travis.yml
+++ b/.travis.yml
@@ -187,7 +187,7 @@ script:
       Xvfb :1 -screen 0 1024x768x24 &
       xfwm4 &
       export ASAN_OPTIONS=detect_leaks=0;
-      ./ci-regression.sh
+      ./ci-regression.sh "/tmp/enigma-master"
       ./CommandLine/testing/GitHub-ImageDiff.sh
       # upload coverage report for regression tests
       bash <(curl -s https://codecov.io/bash) -f "*.info"
