--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
@@ -1,10 +1,2 @@
-override CXXFLAGS += -IGraphics_Systems/OpenGL3/glad/
-SOURCES += $(wildcard Graphics_Systems/OpenGL3/*.cpp) $(wildcard Graphics_Systems/General/*.cpp) Graphics_Systems/OpenGL3/glad/glad.c
-
-ifeq ($(TARGET-PLATFORM), Windows)
-	override LDLIBS += -lopengl32 -lglu32
-else ifeq ($(TARGET-PLATFORM), Linux)
-	override LDLIBS += -lGL -lGLU -ldl
-else ifeq ($(TARGET-PLATFORM), MacOSX)
-	override LDLIBS += -framework OpenGL
-endif
+include Graphics_Systems/OpenGL/Makefile
+SOURCES += $(wildcard Graphics_Systems/OpenGL3/*.cpp)
