--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES2/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES2/Makefile
@@ -1,10 +1,3 @@
+include Graphics_Systems/OpenGL/Makefile
 override CXXFLAGS += -IGraphics_Systems/OpenGLES2/glad/ -DglClearDepth=glClearDepthf -DGL_BGRA=GL_BGRA_EXT -DENIGMA_GRAPHICS_OPENGLES2
-SOURCES += $(wildcard Graphics_Systems/OpenGL3/*.cpp) $(wildcard Graphics_Systems/General/*.cpp) Graphics_Systems/OpenGLES2/glad/glad.c
-
-ifeq ($(TARGET-PLATFORM), Windows)
-	override LDLIBS += -lopengl32 -lglu32
-else ifeq ($(TARGET-PLATFORM), Linux)
-	override LDLIBS += -lGL -lGLU -ldl
-else ifeq ($(TARGET-PLATFORM), MacOSX)
-	override LDLIBS += -framework OpenGL
-endif
+SOURCES += $(wildcard Graphics_Systems/OpenGLES2/*.cpp) $(wildcard Graphics_Systems/OpenGL2/*.cpp) Graphics_Systems/OpenGLES2/glad/glad.c
