--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,9 @@ before_install:
     set -eo pipefail
 
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-      sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
       sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
       sudo apt-get -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev \
-        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libglew-dev     \
+        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev \
         libprotobuf-dev protobuf-compiler;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
@@ -29,19 +28,13 @@ before_install:
         if [ "$COMPILER" == "gcc32" ]; then
           sudo apt-get -y install gcc-multilib g++-multilib;
         fi
-
-        sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so;
-        sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so;
-        sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so;
-        sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include;
-        sudo ln -s /usr/lib/i386-linux-gnu/libGLEW.so.1.10 /usr/lib/i386-linux-gnu/libGLEW.so;
       elif [ "$COMPILER" == "MinGW64" ] || [ "$COMPILER" == "MinGW32" ]; then
         sudo apt-get -y install mingw-w64 wine;
         curl -L https://github.com/fundies/enigma-libs/files/1620148/enigma-libs.zip > enigma-libs.zip;
         unzip enigma-libs.zip -d ENIGMAsystem/;
         mv ENIGMAsystem/Install ENIGMAsystem/Additional;
       else
-        sudo apt-get -y install libc++-dev libglu1-mesa-dev;
+        sudo apt-get -y install libc++-dev libglu1-mesa-dev libglew-dev;
       fi
 
       if [ "$AUDIO" == "OpenAL" ]; then
@@ -94,7 +87,8 @@ install:
 
 # by default most of our jobs will be run on a linux instance
 os: linux
-group: travis_latest
+dist: xenial
+group: edge
 compiler: gcc
 language: cpp
 
