--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES3/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES3/Makefile
@@ -1,3 +1,4 @@
 include Graphics_Systems/OpenGL/Makefile
-override CXXFLAGS += -IGraphics_Systems/OpenGLES3/glad/ -DglClearDepth=glClearDepthf -DGL_BGRA=GL_BGRA_EXT -DENIGMA_GRAPHICS_OPENGLES3
+override CXXFLAGS += -IGraphics_Systems/OpenGLES3/glad/ -DENIGMA_GRAPHICS_OPENGLES3
 SOURCES += $(wildcard Graphics_Systems/OpenGLES3/*.cpp) $(wildcard Graphics_Systems/OpenGL3/*.cpp) Graphics_Systems/OpenGLES3/glad/glad.c
+SOURCES := $(filter-out GL3version.cpp, $(SOURCES))
