--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES2/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES2/Makefile
@@ -1,3 +1,3 @@
 include Graphics_Systems/OpenGL/Makefile
-override CXXFLAGS += -IGraphics_Systems/OpenGLES2/glad/ -DglClearDepth=glClearDepthf -DGL_BGRA=GL_BGRA_EXT -DENIGMA_GRAPHICS_OPENGLES2
+override CXXFLAGS += -IGraphics_Systems/OpenGLES2/glad/ -DENIGMA_GRAPHICS_OPENGLES2
 SOURCES += $(wildcard Graphics_Systems/OpenGLES2/*.cpp) $(wildcard Graphics_Systems/OpenGL2/*.cpp) Graphics_Systems/OpenGLES2/glad/glad.c
