--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
@@ -1,2 +1,7 @@
 include Graphics_Systems/OpenGL/Makefile
 SOURCES += $(wildcard Graphics_Systems/OpenGL3/*.cpp)
+
+VERTEX_SHADER_PREFIX := Graphics_Systems/OpenGL3/vertex_shader_prefix.glsl
+VERTEX_SHADER := Graphics_Systems/OpenGL3/vertex_shader.glsl
+FRAGMENT_SHADER_PREFIX := Graphics_Systems/OpenGL3/fragment_shader_prefix.glsl
+FRAGMENT_SHADER := Graphics_Systems/OpenGL3/fragment_shader.glsl
