--- a/ENIGMAsystem/SHELL/Bridges/SDL-OpenGLES/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/SDL-OpenGLES/Makefile
@@ -1,1 +1,1 @@
-SOURCES += $(wildcard Bridges/SDL-OpenGLES/*.cpp)
+SOURCES += $(wildcard Bridges/SDL-OpenGLES/*.cpp) $(wildcard Bridges/SDL-OpenGL/*.cpp)
