fix the makefile

--- a/ENIGMAsystem/SHELL/Makefile
+++ b/ENIGMAsystem/SHELL/Makefile
@@ -99,8 +99,9 @@ clean:
 cleandep:
 	$(RM) $(CLEANDEPS)
 
-#TODO: Harass Josh constantly and consistently
-SOURCES := $(wildcard *.cpp) $(wildcard Platforms/General/*.cpp) /c/Users/Owner/Desktop/enigma-dev/shader.cpp #/tmp/shader.cpp #$(subst :,\:,$(CODEGEN)/shader.cpp)
+SHADER_CPP := $(subst //,/,$(subst :,,$(CODEGEN)/shader.cpp))
+
+SOURCES := $(wildcard *.cpp) $(wildcard Platforms/General/*.cpp) $(SHADER_CPP)
 include $(addsuffix /Makefile,$(SYSTEMS) $(EXTENSIONS))
 include Bridges/$(PLATFORM)-$(GRAPHICS)/Makefile
 
@@ -124,12 +125,12 @@ endif
 # building #
 ############
 
-compile_game: cleandep compile_shaders $(OBJECTS) $(RCFILES) $(RESOURCEBINARY) $(DEPENDENCIES)
+compile_game: cleandep $(OBJECTS) $(RCFILES) $(RESOURCEBINARY) $(DEPENDENCIES)
 	$(CXX) $(LDFLAGS) -o "$(OUTPUTNAME)" $(OBJECTS) $(RESOURCEBINARY) $(LDLIBS)
 	@echo Built to "$(OUTPUTNAME)"
 
-compile_shaders: $(VERTEX_SHADER_PREFIX) $(VERTEX_SHADER) $(FRAGMENT_SHADER_PREFIX) $(FRAGMENT_SHADER)
-	./shader_build.sh $(CODEGEN)/shader.cpp $(VERTEX_SHADER_PREFIX) $(VERTEX_SHADER) $(FRAGMENT_SHADER_PREFIX) $(FRAGMENT_SHADER)
+$(SHADER_CPP): $(VERTEX_SHADER_PREFIX) $(VERTEX_SHADER) $(FRAGMENT_SHADER_PREFIX) $(FRAGMENT_SHADER)
+	./shader_build.sh $(SHADER_CPP) $(VERTEX_SHADER_PREFIX) $(VERTEX_SHADER) $(FRAGMENT_SHADER_PREFIX) $(FRAGMENT_SHADER)
 
 # GCC will figure out dependencies and write out makefile rules in %.d when they change
 # -MMD outputs dependencies to %.d as a side effect of compilation, ignoring system headers
@@ -155,7 +156,7 @@ GENERATED_FILE:
 $(OBJDIR)/%.rc: %.rc
 	$(WINDRES) -o $@ -I. -I$(WORKDIR) $^ -O rc $(RCFLAGS)
 
-$(OBJDIRS):
+$(OBJDIRS): $(SHADER_CPP)
 	$(MKDIR) -p $@
 
 ifneq ($(MAKECMDGOALS),clean)
