fix more make bugs, add shader_version, fix Robert's shit line endings, namespace shader vars

--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL3/Makefile
@@ -1,6 +1,7 @@
 include Graphics_Systems/OpenGL/Makefile
 SOURCES += $(wildcard Graphics_Systems/OpenGL3/*.cpp)
 
+SHADER_VERSION := Graphics_Systems/OpenGL3/shaders/version.glsl
 VERTEX_SHADER_PREFIX := Graphics_Systems/OpenGL3/vertex_shader_prefix.glsl
 VERTEX_SHADER := Graphics_Systems/OpenGL3/vertex_shader.glsl
 FRAGMENT_SHADER_PREFIX := Graphics_Systems/OpenGL3/fragment_shader_prefix.glsl
