--- a/ENIGMAsystem/SHELL/Bridges/Win32-OpenGL3/Makefile
+++ b/ENIGMAsystem/SHELL/Bridges/Win32-OpenGL3/Makefile
@@ -1,1 +1,2 @@
-SOURCES += $(wildcard Bridges/Win32-OpenGL3/*.cpp) $(wildcard Bridges/Win32-OpenGL/*.cpp)
+include Bridges/Win32-OpenGL/Makefile
+SOURCES += $(wildcard Bridges/Win32-OpenGL3/*.cpp)
