deduplicate gl screens

--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGL/Makefile
@@ -1,3 +1,4 @@
+include Graphics_Systems/OpenGL-OpenGLES/Makefile
 override CXXFLAGS += -IGraphics_Systems/OpenGL/ -IBridges/Glew-OpenGL
 SOURCES += $(wildcard Graphics_Systems/OpenGL/*.cpp) $(wildcard Graphics_Systems/General/*.cpp)
 
