--- a/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES/Makefile
+++ b/ENIGMAsystem/SHELL/Graphics_Systems/OpenGLES/Makefile
@@ -1,3 +1,4 @@
+include Graphics_Systems/OpenGL-OpenGLES/Makefile
 override CXXFLAGS += -IGraphics_Systems/OpenGLES/ -IBridges/SDL-OpenGLES
 SOURCES += $(wildcard Graphics_Systems/OpenGLES/*.cpp) $(wildcard Graphics_Systems/OpenGL/*.cpp) $(wildcard Graphics_Systems/General/*.cpp)
 
