--- a/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
+++ b/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
@@ -1,6 +1,6 @@
 include $(SHARED_SRC_DIR)/tinyfiledialogs/Makefile
 
-ifeq ($(TARGET-PLATFORM), MacOS)
+ifeq ($(TARGET-PLATFORM), MacOSX)
 	SOURCES += $(wildcard Widget_Systems/TinyFileDialogs/dialogs-macos.cpp)
 
 ifeq ($(TARGET-PLATFORM), Linux)
