--- a/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
+++ b/ENIGMAsystem/SHELL/Widget_Systems/TinyFileDialogs/Makefile
@@ -1,9 +1,9 @@
 include $(SHARED_SRC_DIR)/tinyfiledialogs/Makefile
 
 ifeq ($(TARGET-PLATFORM), MacOSX)
-	SOURCES += $(wildcard Widget_Systems/TinyFileDialogs/dialogs-macos.cpp)
+	SOURCES += Widget_Systems/TinyFileDialogs/dialogs-macos.cpp
 endif
 
 ifeq ($(TARGET-PLATFORM), Linux)
-	SOURCES += $(wildcard Widget_Systems/TinyFileDialogs/dialogs-linux.cpp)
+	SOURCES += Widget_Systems/TinyFileDialogs/dialogs-linux.cpp
 endif
