--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,10 +57,10 @@ install:
   - call C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
   - start /B C:/msys64/mingw64.exe -lc "exit"
   #- start /B C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  - start /B C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
-  #- cmd /K C:/msys64/mingw64.exe -lc "exit"
-  #- cmd /K C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
-  #- cmd /K C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
+  #- start /B C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
+  - cmd /K C:/msys64/mingw64.exe -lc "exit"
+  - cmd /K C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
+  - cmd /K C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
   - C:/msys64/mingw64.exe -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -lc "exit"
   - C:\msys64\msys2_shell.cmd -mingw64 -no-start -lc "exit"
