mek use at least C++11

--- a/CommandLine/libAssets/Makefile
+++ b/CommandLine/libAssets/Makefile
@@ -15,7 +15,7 @@ OBJ_DIR   := .eobjs
 
 SHARED_SRC_DIR := ../../shared
 
-CXXFLAGS  := -I$(SRC_DIR) -I$(SHARED_SRC_DIR) -I$(SHARED_SRC_DIR)/lodepng -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -Wall -Wextra -Wpedantic -g -fPIC
+CXXFLAGS  := -I$(SRC_DIR) -I$(SHARED_SRC_DIR) -I$(SHARED_SRC_DIR)/lodepng -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -std=c++11 -Wall -Wextra -Wpedantic -g -fPIC
 LDFLAGS   := -lz -L$(SHARED_SRC_DIR)/lodepng -llodepng -L../../ -lProtocols -lprotobuf
 
 LDFLAGS += $(FS_LIBS)
