--- a/CommandLine/libAssets/Makefile
+++ b/CommandLine/libAssets/Makefile
@@ -14,11 +14,11 @@ SRC_DIR   := .
 OBJ_DIR   := .eobjs
 
 SHARED_SRC_DIR := ../../shared
+include $(SHARED_SRC_DIR)/Makefile
+include $(SHARED_SRC_DIR)/bettersystem/Makefile
 
-CXXFLAGS  := -I$(SRC_DIR) -I$(SHARED_SRC_DIR) -I$(SHARED_SRC_DIR)/lodepng -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -std=c++11 -Wall -Wextra -Wpedantic -g -fPIC
+CXXFLAGS  := -I$(SRC_DIR) -I../../CompilerSource -I$(SHARED_SRC_DIR) -I$(SHARED_SRC_DIR)/lodepng -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -std=c++11 -Wall -Wextra -Wpedantic -g -fPIC
 LDFLAGS   := -lz -L$(SHARED_SRC_DIR)/lodepng -llodepng -L../../ -lProtocols -lprotobuf
-
-LDFLAGS += $(FS_LIBS)
 
 rwildcard=$(wildcard $1/$2) $(foreach d,$(wildcard $1/*),$(call rwildcard,$d,$2))
 
@@ -27,6 +27,11 @@ OBJECTS := $(patsubst $(SRC_DIR)/%, $(OBJ_DIR)/%, $(patsubst %.cpp, %.o, $(SOURC
 
 OBJDIRS = $(sort $(OBJ_DIR) $(dir $(OBJECTS)))
 DEPENDS = $(OBJECTS:.o=.d)
+
+CXXFLAGS += -I$(SHARED_SRC_DIR) $(addprefix -I$(SHARED_SRC_DIR)/, $(SHARED_INCLUDES))
+SOURCES += $(addprefix $(SHARED_SRC_DIR),$(SHARED_SOURCES))
+OBJECTS += $(addprefix $(OBJ_DIR)/shared/,$(SHARED_SOURCES:.cpp=.o))
+DEPENDS += $(addprefix $(OBJ_DIR)/shared/,$(SHARED_SOURCES:.cpp=.d))
 
 lib:
 	$(MAKE) $(LIBRARY)
@@ -45,6 +50,8 @@ $(OBJDIRS):
 	mkdir -p $@
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | obj_dirs
+	$(CXX) $(CXXFLAGS) -MMD -c -o $@ $<
+$(OBJ_DIR)/shared/%.o: $(SHARED_SRC_DIR)/%.cpp | obj_dirs
 	$(CXX) $(CXXFLAGS) -MMD -c -o $@ $<
 
 .PHONY: lib clean obj_dirs
