single add_library

--- a/CommandLine/libAssets/CMakeLists.txt
+++ b/CommandLine/libAssets/CMakeLists.txt
@@ -11,8 +11,7 @@ project(${LIB} VERSION ${LIB_VERSION} DESCRIPTION ${LIB_DESCRIPTION})
 file(GLOB SRC_FILES *.cpp)
 get_filename_component(ENIGMA_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PATH)
 get_filename_component(ENIGMA_DIR "${ENIGMA_DIR}" PATH)
-add_library(${LIB} STATIC ${SRC_FILES} "${ENIGMA_DIR}/shared/lodepng/lodepng.cpp")
-add_library(${LIB} STATIC ${SRC_FILES} "${ENIGMA_DIR}/shared/bettersystem/bettersystem.cpp")
+add_library(${LIB} STATIC ${SRC_FILES} "${ENIGMA_DIR}/shared/lodepng/lodepng.cpp" "${ENIGMA_DIR}/shared/bettersystem/bettersystem.cpp")
 set_property(TARGET ${LIB} PROPERTY CXX_STANDARD 17)
 set_property(TARGET ${LIB} PROPERTY CXX_STANDARD_REQUIRED ON)
 
